# sparc-experiments

./: .gitignore  LICENSE  README.md
sparc-demo-c/: .gitignore  Makefile  test1.c
sparc-demo-rtems/: .gitignore  Makefile  README.md  rtems-rust.c
sparc-demo-rtems/rtemsdemo/: Cargo.toml
sparc-demo-rtems/rtemsdemo/.cargo/: config.toml
sparc-demo-rtems/rtemsdemo/src/: lib.rs
sparc-demo-rust/: Cargo.toml  README.md  build.rs  sparc-unknown-none.json
sparc-demo-rust/.cargo/: config.toml
sparc-demo-rust/src/: main.rs
sparc-docker/: Dockerfile  README.md
